actualized swagger and fixed bugs
