# docs/swagger.yaml
@@ -54,7 +54,10 @@ definitions:
       created_at:
         example: "2024-01-15T10:30:00Z"
         type: string
-      payload: {}
+      payload:
+        type: object
+      resolved_stack:
+        type: string
     type: object
   handler.IssueListResponse:
     properties:
